--- a/4.html
+++ b/4.html
@@ -116,7 +116,7 @@ body {
 
 <div class="row">
   <div class="column left" style="background-color:#ffffff;">
-    <img src="Archive/HMS40033 Front.jpg">
+    <img src="Archive/HMS40033 Mauve Front.jpg">
   </div>
   <div class="column right" style="background-color:#ffffff;">
         <h1>CROCHET KNIT MIDI SKIRT</h1>
@@ -133,7 +133,7 @@ body {
 
 
     <div class="content">
-                <img src="Archive/HMS40033 Front.jpg">
+                <img src="Archive/HMS40033 Mauve Front.jpg">
                 <img src="Archive/HMS40033 Side.jpg">
                  <img src="Archive/HMS40033 Back.jpg"><br><br><br><br><br><br><br><br><br><br><br><br><br>
                  <img src="Archive/HMS40033 Size Chart.png">
