--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 
 
                       <a href="4.html">
-                    <img src="Archive/HMS40033 Front.jpg">
+                    <img src="Archive/HMS40033 Mauve Front.jpg">
                 </a>
                     <p class="title">Corchet Knit Midi Skirt</p>
                 </li>
